Add week-task-list, week-task-list-2, some icons and refactor styles

--- a/src/project-list.html
+++ b/src/project-list.html
@@ -9,7 +9,7 @@
 
 	<header class="header header_blue">
 		<div class="header__menu header__menu_blue"></div>
-            <b>WORK</b>
+            WORK
             <span class="editor-icon"></span>
         <div class="header__add header__add_blue"></div>
     </header>
@@ -21,11 +21,11 @@
             </label>
             <input class="checkbox-control" id="chk1" name="chk1" type="checkbox" />
             <span class="note-header">
-                <b>Lesson</b>
+                Lesson
                 <br />
                 <span class="additional-info">
                     <span class="additional-info__calendar"></span>
-                    <b> 28 MAR</b>
+                    28 MAR
                 </span>
             </span>
         </li>
@@ -36,11 +36,11 @@
             </label>
             <input class="checkbox-control" id="chk2" name="height" type="checkbox" />
             <span class="note-header">
-                <b>Do the home work </b>
+                Do the home work
                 <br />
                 <span class="additional-info">
                     <span class="additional-info__calendar"></span>
-                    <b> 28 MAR</b>
+                    28 MAR
                 </span>
             </span>
         </li>
@@ -51,17 +51,17 @@
             </label>
             <input class="checkbox-control" id="chk3" name="height"  type="checkbox" />
             <span class="note-header">
-                <b>Buy food in Wallmart</b>
+                Buy food in Wallmart
                 <br />
                 <span class="additional-info">
                     <span class="additional-info__calendar"></span>
-                    <b> 28 MAR</b>
+                    28 MAR
                 </span>
             </span>
             <div class="time-info">
                 <span class="additional-info">
                     <span class="additional-info__notificator"></span>
-                    <b>19:00</b>
+                    <span class="additional-info__time">19:00</span>
                 </span>
             </div>
         </li>
@@ -72,17 +72,17 @@
             </label>
             <input class="checkbox-control" id="chk4" name="height" type="checkbox" />
             <span class="note-header">
-                <b>Lesson</b>
+                Lesson
                 <br />
                 <span class="additional-info">
                     <span class="additional-info__calendar"></span>
-                    <b> 28 MAR</b>
+                    28 MAR
                 </span>
             </span>
             <div class="time-info">
                 <span class="additional-info">
                     <span class="additional-info__timer"></span>
-                    <b>12:43:34</b>
+                    12:43:34
                 </span>
             </div>
         </li>
@@ -93,11 +93,11 @@
             </label>
             <input class="checkbox-control" id="chk5" name="height" type="checkbox" />
             <span class="note-header">
-                <b>Do the home work </b>
+                Do the home work
                 <br />
                 <span class="additional-info">
                     <span class="additional-info__calendar"></span>
-                    <b> 28 MAR</b>
+                    28 MAR
                 </span>
             </span>
         </li>
@@ -108,17 +108,17 @@
             </label>
             <input class="checkbox-control" id="chk6" name="height" type="checkbox" />
             <span class="note-header">
-                <b>Buy food in Wallmart</b>
+                Buy food in Wallmart
                 <br />
                 <span class="additional-info">
                     <span class="additional-info__calendar"></span>
-                    <b> 28 MAR</b>
+                    28 MAR
                 </span>
             </span>
             <div class="time-info">
                 <span class="additional-info">
                     <span class="additional-info__notificator"></span>
-                    <b>19:00</b>
+                    <span class="additional-info__time">19:00</span>
                 </span>
             </div>
         </li>
@@ -129,17 +129,17 @@
             </label>
             <input class="checkbox-control" id="chk7" name="height" type="checkbox" />
             <span class="note-header">
-                <b>Lesson</b>
+                Lesson
                 <br />
                 <span class="additional-info">
                     <span class="additional-info__calendar"></span>
-                    <b> 28 MAR</b>
+                    28 MAR
                 </span>
             </span>
             <div class="time-info">
                 <span class="additional-info">
                     <span class="additional-info__timer"></span>
-                    <b>12:43:34</b>
+                    12:43:34
                 </span>
             </div>
         </li>
@@ -150,11 +150,11 @@
             </label>
             <input class="checkbox-control" id="chk8" name="height" type="checkbox" />
             <span class="note-header">
-                <b>Do the home work </b>
+                Do the home work
                 <br />
                 <span class="additional-info">
                     <span class="additional-info__calendar"></span>
-                    <b> 28 MAR</b>
+                    28 MAR
                 </span>
             </span>
         </li>
