--- a/src/html/blocks/task-item.html
+++ b/src/html/blocks/task-item.html
@@ -1,35 +1,36 @@
 <li class="task-item">
 
-    <div class="task-item__left">
+    <div class="task-item__checkbox">
         <div class="i-v-box">
             <span class="icon icon_check-box@@checkbox_mod"></span>
         </div>
     </div>
 
-    <div class="task-item__center">
-        <div class="i-v-box">
-            <span class="task-item__title">
-                @@title
-            </span>
+    <div class="task-item__info">
+        <span class="task-item__name">
+            @@title
+        </span>
 
-            <span class="task-item__label task-item__label_group">
-                <i class="badge badge_circle @@group_mixin"></i>
-                @@group
-            </span>
-        </div>
+        <span class="task-item__label task-item__label_@@info_label_mod">
+            @@if (project_color) {
+            <i class="badge badge_circle @@project_color"> </i>
+            }
+            @@info_label
+        </span>
     </div>
 
-    <div class="task-item__right">
-        <div class="i-v-box">
-            <span class="task-item__label task-item__label_notification">
-                <i class="icon icon_notifications-none"></i>
-                17:00
-            </span>
-            <span class="task-item__label task-item__label_access-time">
-                <i class="icon icon_access-time"></i>
-                12:43:34
-            </span>
-        </div>
-    </div>
+    <div class="task-item__notification">
 
+        @@if (notification) {
+        <span class="task-item__label task-item__label_notification">
+            @@notification
+        </span>
+        }
+
+        @@if (access_time) {
+        <span class="task-item__label task-item__label_access-time">
+            @@access_time
+        </span>
+        }
+    </div>
 </li>
