[BEM] - Added mocking data

--- a/src/html/blocks/today-task-list.html
+++ b/src/html/blocks/today-task-list.html
@@ -1,57 +1,71 @@
 <ul class="task-list">
-    @@include('./task-item.html', { "title": "Lesson",
-        "group": "education",
-        "group_mixin":"color_green",
-        "deadline_date": "education",
-        "checkbox_mod" : "_checked"
+    @@include('./task-item.html', {
+        "title": "Lesson",
+        "info_label": "education",
+        "info_label_mod": "project",
+        "project_color": "color_green",
+        "checkbox_mod" : "_checked",
+        "notification" : "17:00",
+        "access_time" : "12:43:34"
     })
 
     @@include('./task-item.html',{
         "title": "Do the home work",
-        "group": "education",
-        "group_mixin":"color_green",
-        "deadline_date": false,
-        "checkbox_mod" : ""
+        "info_label": "education",
+        "info_label_mod": "project",
+        "project_color": "color_green",
+        "checkbox_mod" : "",
+        "notification" : "",
+        "access_time" : ""
     })
 
     @@include('./task-item.html', {
         "title": "Buy food in Wallmart",
-        "group": "home",
-        "group_mixin":"color_orange",
-        "deadline_date": "21 mar",
-        "checkbox_mod" : ""
+        "info_label": "home",
+        "info_label_mod": "project",
+        "project_color": "color_orange",
+        "checkbox_mod" : "",
+        "notification" : "19:00",
+        "access_time" : ""
     })
 
     @@include('./task-item.html', {
         "title": "Gym",
-        "group": "health",
-        "group_mixin":"color_orange",
-        "deadline_date": false,
-        "checked": true
+        "info_label": "health",
+        "info_label_mod": "project",
+        "project_color": "color_orange",
+        "checkbox_mod": "",
+        "notification" : "",
+        "access_time" : "12:43:34"
     })
 
     @@include('./task-item.html', {
         "title": "Do the home work",
-        "group": "education",
-        "group_mixin":"color_green",
-        "deadline_date": "21 mar",
-        "checkbox_mod" : "_checked"
+        "info_label": "education",
+        "info_label_mod": "project",
+        "project_color": "color_green",
+        "checkbox_mod" : "_checked",
+        "notification" : "",
+        "access_time" : ""
     })
 
     @@include('./task-item.html', {
         "title": "By food in Wallmart",
-        "group": "home",
-        "group_mixin":"color_orange",
-        "deadline_date": "21 mar",
-        "checkbox_mod" : ""
+        "info_label": "home",
+        "info_label_mod": "project",
+        "project_color": "color_orange",
+        "checkbox_mod" : "",
+        "notification" : "19:00",
+        "access_time" : ""
     })
 
     @@include('./task-item.html', {
         "title": "Gym",
-        "group": "health",
-        "group_mixin":"color_orange",
-        "deadline_date": false,
-        "checkbox_mod" : "_checked"
-
+        "info_label": "health",
+        "info_label_mod": "project",
+        "project_color": "color_orange",
+        "checkbox_mod" : "_checked",
+        "notification" : "",
+        "access_time" : "12:43:34"
     })
 </ul>
