--- a/src/html/pages/project/task-list.html
+++ b/src/html/pages/project/task-list.html
@@ -1,5 +1,5 @@
 <ul class="task-list">
-    @@include('./task-item.html', {
+    @@include('../../blocks/task-item.html', {
     "title": "Lesson",
     "info_label": "28 mar",
     "info_label_mod": "date",
@@ -9,7 +9,7 @@
     "access_time" : ""
     })
 
-    @@include('./task-item.html',{
+    @@include('../../blocks/task-item.html',{
     "title": "Do the home work",
     "info_label": "29 mar",
     "info_label_mod": "date",
@@ -19,7 +19,7 @@
     "access_time" : ""
     })
 
-    @@include('./task-item.html', {
+    @@include('../../blocks/task-item.html', {
     "title": "Buy food in Wallmart",
     "info_label": "",
     "info_label_mod": "date",
@@ -31,7 +31,7 @@
 
     <!-- next trio -->
 
-    @@include('./task-item.html', {
+    @@include('../../blocks/task-item.html', {
     "title": "Lesson",
     "info_label": "",
     "info_label_mod": "date",
@@ -41,7 +41,7 @@
     "access_time" : "12:43:34"
     })
 
-    @@include('./task-item.html',{
+    @@include('../../blocks/task-item.html',{
     "title": "Do the home work",
     "info_label": "",
     "info_label_mod": "date",
@@ -51,7 +51,7 @@
     "access_time" : ""
     })
 
-    @@include('./task-item.html', {
+    @@include('../../blocks/task-item.html', {
     "title": "Buy food in Wallmart",
     "info_label": "31 mar",
     "info_label_mod": "date",
@@ -63,7 +63,7 @@
 
     <!--next two-->
 
-    @@include('./task-item.html', {
+    @@include('../../blocks/task-item.html', {
     "title": "Lesson",
     "info_label": "",
     "info_label_mod": "date",
@@ -73,7 +73,7 @@
     "access_time" : "12:43:34"
     })
 
-    @@include('./task-item.html',{
+    @@include('../../blocks/task-item.html',{
     "title": "Do the home work",
     "info_label": "",
     "info_label_mod": "date",
