--- a/src/html/pages/today/task-list.html
+++ b/src/html/pages/today/task-list.html
@@ -1,5 +1,5 @@
 <ul class="task-list">
-    @@include('./task-item.html', {
+    @@include('../../blocks/task-item.html', {
         "title": "Lesson",
         "info_label": "education",
         "info_label_mod": "project",
@@ -9,7 +9,7 @@
         "access_time" : "12:43:34"
     })
 
-    @@include('./task-item.html',{
+    @@include('../../blocks/task-item.html',{
         "title": "Do the home work",
         "info_label": "education",
         "info_label_mod": "project",
@@ -19,7 +19,7 @@
         "access_time" : ""
     })
 
-    @@include('./task-item.html', {
+    @@include('../../blocks/task-item.html', {
         "title": "Buy food in Wallmart",
         "info_label": "home",
         "info_label_mod": "project",
@@ -29,7 +29,7 @@
         "access_time" : ""
     })
 
-    @@include('./task-item.html', {
+    @@include('../../blocks/task-item.html', {
         "title": "Gym",
         "info_label": "health",
         "info_label_mod": "project",
@@ -39,7 +39,7 @@
         "access_time" : "12:43:34"
     })
 
-    @@include('./task-item.html', {
+    @@include('../../blocks/task-item.html', {
         "title": "Do the home work",
         "info_label": "education",
         "info_label_mod": "project",
@@ -49,7 +49,7 @@
         "access_time" : ""
     })
 
-    @@include('./task-item.html', {
+    @@include('../../blocks/task-item.html', {
         "title": "By food in Wallmart",
         "info_label": "home",
         "info_label_mod": "project",
@@ -59,7 +59,7 @@
         "access_time" : ""
     })
 
-    @@include('./task-item.html', {
+    @@include('../../blocks/task-item.html', {
         "title": "Gym",
         "info_label": "health",
         "info_label_mod": "project",
