[BEM] - Added week-calendar block

--- a/src/week-task-list.html
+++ b/src/week-task-list.html
@@ -5,7 +5,9 @@
 </head>
 <body>
     @@include('./html/blocks/header.html', {"color": "default", "title" : "29 mar 2015", "title_icon": false})
-    
+
+    @@include('./html/blocks/week-calendar.html')
+
     @@include('./html/pages/week/today-task-list.html', {})
     @@include('./html/pages/week/tomorrow-task-list.html', {})
 </body>
