[HTML Layouts] Create hover-layout with two colored buttons over tasks-lists

--- a/src/week-task-list.html
+++ b/src/week-task-list.html
@@ -39,6 +39,15 @@
 						<div class="tasks-item__measurement">12:43:34</div>
 					</div>
 				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
+				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-1">
 				<div class="tasks-item__checkbox">&nbsp;</div>
@@ -50,6 +59,15 @@
 				</div>
 				<div class="tasks-item-time">
 					<div class="tasks-item-wrapper">&nbsp;</div>
+				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
 				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-2">
@@ -65,6 +83,15 @@
 						<div class="tasks-item__alarm">19:00</div>
 					</div>
 				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
+				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-6">
 				<div class="tasks-item__checkbox">&nbsp;</div>
@@ -78,6 +105,15 @@
 					<div class="tasks-item-wrapper">
 						<div class="tasks-item__measurement">12:43:34</div>
 					</div>
+				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
 				</div>
 			</li>
 		</ul>
@@ -97,6 +133,15 @@
 						<div class="tasks-item__measurement">12:43:34</div>
 					</div>
 				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
+				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-1">
 				<div class="tasks-item__checkbox">&nbsp;</div>
@@ -108,6 +153,15 @@
 				</div>
 				<div class="tasks-item-time">
 					<div class="tasks-item-wrapper">&nbsp;</div>
+				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
 				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-2">
@@ -123,6 +177,15 @@
 						<div class="tasks-item__alarm">19:00</div>
 					</div>
 				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
+				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-6">
 				<div class="tasks-item__checkbox">&nbsp;</div>
@@ -136,6 +199,15 @@
 					<div class="tasks-item-wrapper">
 						<div class="tasks-item__measurement">12:43:34</div>
 					</div>
+				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
 				</div>
 			</li>
 		</ul>
@@ -155,6 +227,15 @@
 						<div class="tasks-item__measurement">12:43:34</div>
 					</div>
 				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
+				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-1">
 				<div class="tasks-item__checkbox">&nbsp;</div>
@@ -166,6 +247,15 @@
 				</div>
 				<div class="tasks-item-time">
 					<div class="tasks-item-wrapper">&nbsp;</div>
+				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
 				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-2">
@@ -181,6 +271,15 @@
 						<div class="tasks-item__alarm">19:00</div>
 					</div>
 				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
+				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-6">
 				<div class="tasks-item__checkbox">&nbsp;</div>
@@ -194,6 +293,15 @@
 					<div class="tasks-item-wrapper">
 						<div class="tasks-item__measurement">12:43:34</div>
 					</div>
+				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
 				</div>
 			</li>
 		</ul>
@@ -213,6 +321,15 @@
 						<div class="tasks-item__measurement">12:43:34</div>
 					</div>
 				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
+				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-1">
 				<div class="tasks-item__checkbox">&nbsp;</div>
@@ -224,6 +341,15 @@
 				</div>
 				<div class="tasks-item-time">
 					<div class="tasks-item-wrapper">&nbsp;</div>
+				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
 				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-2">
@@ -239,6 +365,15 @@
 						<div class="tasks-item__alarm">19:00</div>
 					</div>
 				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
+				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-6">
 				<div class="tasks-item__checkbox">&nbsp;</div>
@@ -252,6 +387,15 @@
 					<div class="tasks-item-wrapper">
 						<div class="tasks-item__measurement">12:43:34</div>
 					</div>
+				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
 				</div>
 			</li>
 		</ul>
@@ -271,6 +415,15 @@
 						<div class="tasks-item__measurement">12:43:34</div>
 					</div>
 				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
+				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-1">
 				<div class="tasks-item__checkbox">&nbsp;</div>
@@ -282,6 +435,15 @@
 				</div>
 				<div class="tasks-item-time">
 					<div class="tasks-item-wrapper">&nbsp;</div>
+				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
 				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-2">
@@ -297,6 +459,15 @@
 						<div class="tasks-item__alarm">19:00</div>
 					</div>
 				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
+				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-6">
 				<div class="tasks-item__checkbox">&nbsp;</div>
@@ -310,6 +481,15 @@
 					<div class="tasks-item-wrapper">
 						<div class="tasks-item__measurement">12:43:34</div>
 					</div>
+				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
 				</div>
 			</li>
 		</ul>
@@ -329,6 +509,15 @@
 						<div class="tasks-item__measurement">12:43:34</div>
 					</div>
 				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
+				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-1">
 				<div class="tasks-item__checkbox">&nbsp;</div>
@@ -340,6 +529,15 @@
 				</div>
 				<div class="tasks-item-time">
 					<div class="tasks-item-wrapper">&nbsp;</div>
+				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
 				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-2">
@@ -355,6 +553,15 @@
 						<div class="tasks-item__alarm">19:00</div>
 					</div>
 				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
+				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-6">
 				<div class="tasks-item__checkbox">&nbsp;</div>
@@ -368,6 +575,15 @@
 					<div class="tasks-item-wrapper">
 						<div class="tasks-item__measurement">12:43:34</div>
 					</div>
+				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
 				</div>
 			</li>
 		</ul>
@@ -387,6 +603,15 @@
 						<div class="tasks-item__measurement">12:43:34</div>
 					</div>
 				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
+				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-1">
 				<div class="tasks-item__checkbox">&nbsp;</div>
@@ -398,6 +623,15 @@
 				</div>
 				<div class="tasks-item-time">
 					<div class="tasks-item-wrapper">&nbsp;</div>
+				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
 				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-2">
@@ -413,6 +647,15 @@
 						<div class="tasks-item__alarm">19:00</div>
 					</div>
 				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
+				</div>
 			</li>
 			<li class="tasks-item tasks-item_project-6">
 				<div class="tasks-item__checkbox">&nbsp;</div>
@@ -426,6 +669,15 @@
 					<div class="tasks-item-wrapper">
 						<div class="tasks-item__measurement">12:43:34</div>
 					</div>
+				</div>
+
+				<div class="tasks-item__hover">
+					<button class="tasks-item__button tasks-item__button_start">
+						<span class="tasks-item__start">start</span>
+					</button>
+					<button class="tasks-item__button tasks-item__button_edit">
+						<span class="tasks-item__edit">edit</span>
+					</button>
 				</div>
 			</li>
 		</ul>
