--- a/src/html/pages/week/today-task-list.html
+++ b/src/html/pages/week/today-task-list.html
@@ -1,3 +1,5 @@
+<div class="separator"> 28 sun </div>
+
 <ul class="task-list">
     @@include('../../blocks/task-item.html', {
     "title": "Lesson",
