[BEM] - Added checkbox - Changed *task-list.html files to add checkbox identifyers

--- a/src/html/blocks/task-item.html
+++ b/src/html/blocks/task-item.html
@@ -1,9 +1,8 @@
 <li class="task-item">
 
-    <div class="task-item__checkbox">
-        <div class="i-v-box">
-            <span class="icon icon_check-box@@checkbox_mod"></span>
-        </div>
+    <div class="task-item__checkbox checkbox">
+        <input class="checkbox__control" id="@@id" type="checkbox"/>
+        <label class="" for="@@id"></label>
     </div>
 
     <div class="task-item__info">
