[HTML Layouts] Optimize styles in .scss files, add some images, move header into main tag

--- a/src/project-list.html
+++ b/src/project-list.html
@@ -6,14 +6,17 @@
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<header class="header">
-		<div class="header-nav header-nav_project-3">
-			<button class="header__button_menu">&nbsp;</button>
-			<span class="header__title">workdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</span>
-			<button class="header__button_add">&nbsp;</button>
-		</div>
-	</header>
+	<aside>
+		
+	</aside>
 	<main>
+		<header class="header">
+			<div class="header-nav header-nav_project-3">
+				<button class="header__button_menu">&nbsp;</button>
+				<span class="header__title">workdddddddddddddddddddddddddddddddddddddd</span>
+				<button class="header__button_add">&nbsp;</button>
+			</div>
+		</header>
 		<ul class="tasks">
 			<li class="tasks-item">
 				<div class="tasks-item__checkbox">&nbsp;</div>
