--- a/src/week-task-list.html
+++ b/src/week-task-list.html
@@ -6,23 +6,27 @@
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<header class="header">
-		<div class="header-nav">
-			<button class="header__button_menu">&nbsp;</button>
-			<span class="header__title">29 mar 2015</span>
-			<button class="header__button_add">&nbsp;</button>
-		</div>
-		<ul class="header-subnav clearfix">
-			<li class="header-subnav-item"><span class="header-subnav-item__dayNumber">28</span> <span class="header-subnav-item__dayName">sun</span></li>
-			<li class="header-subnav-item"><span class="header-subnav-item__dayNumber">29</span> <span class="header-subnav-item__dayName">mon</span></li>
-			<li class="header-subnav-item"><span class="header-subnav-item__dayNumber">30</span> <span class="header-subnav-item__dayName">tue</span></li>
-			<li class="header-subnav-item"><span class="header-subnav-item__dayNumber">31</span> <span class="header-subnav-item__dayName">wed</span></li>
-			<li class="header-subnav-item"><span class="header-subnav-item__dayNumber">01</span> <span class="header-subnav-item__dayName">thu</span></li>
-			<li class="header-subnav-item"><span class="header-subnav-item__dayNumber">02</span> <span class="header-subnav-item__dayName">fri</span></li>
-			<li class="header-subnav-item"><span class="header-subnav-item__dayNumber">03</span> <span class="header-subnav-item__dayName">sat</span></li>
-		</ul>
-	</header>
+	<aside>
+		
+	</aside>
 	<main>
+		<header class="header">
+			<div class="header-nav">
+				<button class="header__button_menu">&nbsp;</button>
+				<span class="header__title">29 mar 2015</span>
+				<button class="header__button_add">&nbsp;</button>
+			</div>
+			<ul class="header-subnav clearfix">
+				<li class="header-subnav-item"><span class="header-subnav-item__dayNumber">28</span> <span class="header-subnav-item__dayName">sun</span></li>
+				<li class="header-subnav-item"><span class="header-subnav-item__dayNumber">29</span> <span class="header-subnav-item__dayName">mon</span></li>
+				<li class="header-subnav-item"><span class="header-subnav-item__dayNumber">30</span> <span class="header-subnav-item__dayName">tue</span></li>
+				<li class="header-subnav-item"><span class="header-subnav-item__dayNumber">31</span> <span class="header-subnav-item__dayName">wed</span></li>
+				<li class="header-subnav-item"><span class="header-subnav-item__dayNumber">01</span> <span class="header-subnav-item__dayName">thu</span></li>
+				<li class="header-subnav-item"><span class="header-subnav-item__dayNumber">02</span> <span class="header-subnav-item__dayName">fri</span></li>
+				<li class="header-subnav-item"><span class="header-subnav-item__dayNumber">03</span> <span class="header-subnav-item__dayName">sat</span></li>
+			</ul>
+		</header>
+
 		<ul class="tasks">
 			<li class="tasks__header">28 sun</li>
 			<li class="tasks-item tasks-item_project-1">
