--- a/src/task-list.html
+++ b/src/task-list.html
@@ -6,14 +6,17 @@
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<header class="header">
-		<div class="header-nav">
-			<button class="header__button_menu">&nbsp;</button>
-			<span class="header__title">29 mar 2015</span>
-			<button class="header__button_add">&nbsp;</button>
-		</div>
-	</header>
+	<aside>
+		
+	</aside>
 	<main>
+		<header class="header">
+			<div class="header-nav">
+				<button class="header__button_menu">&nbsp;</button>
+				<span class="header__title">29 mar 2015</span>
+				<button class="header__button_add">&nbsp;</button>
+			</div>
+		</header>
 		<ul class="tasks">
 			<li class="tasks-item tasks-item_project-1">
 				<div class="tasks-item__checkbox">&nbsp;</div>
