[BEM] - Extracted list as block

--- a/src/html/pages/week/tomorrow-task-list.html
+++ b/src/html/pages/week/tomorrow-task-list.html
@@ -1,6 +1,6 @@
 <div class="separator"> 29 mon </div>
 
-<ul class="task-list">
+<ul class="list task-list">
 
     @@include('../../blocks/task-item.html', {
     "id" : "3",
