--- a/src/html/pages/project/task-list.html
+++ b/src/html/pages/project/task-list.html
@@ -1,4 +1,4 @@
-<ul class="task-list">
+<ul class="list task-list">
     @@include('../../blocks/task-item.html', {
     "id" : "1",
     "title": "Lesson",
