--- a/src/html/pages/week/today-task-list.html
+++ b/src/html/pages/week/today-task-list.html
@@ -1,6 +1,6 @@
 <div class="separator"> 28 sun </div>
 
-<ul class="task-list">
+<ul class="list task-list">
     @@include('../../blocks/task-item.html', {
     "id" : "1",
     "title": "Lesson",
