[BEM] - Wrapped header and task-list in page

--- a/src/project-task-list.html
+++ b/src/project-task-list.html
@@ -4,7 +4,11 @@
     @@include('./html/_head.html')
 </head>
 <body>
+
+<div class="page">
     @@include('./html/blocks/header.html', {"color" : "blue", "title" : "work", "title_icon": true})
     @@include('./html/pages/project/task-list.html')
+</div>
+
 </body>
 </html>
