--- a/src/task-list.html
+++ b/src/task-list.html
@@ -4,7 +4,11 @@
     @@include('./html/_head.html')
 </head>
 <body>
+
+<div class="page">
     @@include('./html/blocks/header.html', {"color": "default", "title" : "29 mar 2015", "title_icon": false})
     @@include('./html/pages/today/task-list.html', {})
+</div>
+
 </body>
 </html>
