--- a/src/week-task-list.html
+++ b/src/week-task-list.html
@@ -4,11 +4,15 @@
     @@include('./html/_head.html')
 </head>
 <body>
+
+<div class="page">
     @@include('./html/blocks/header.html', {"color": "default", "title" : "29 mar 2015", "title_icon": false})
 
     @@include('./html/blocks/week-calendar.html')
 
     @@include('./html/pages/week/today-task-list.html', {})
     @@include('./html/pages/week/tomorrow-task-list.html', {})
+</div>
+
 </body>
 </html>
