[BEM] - Extracted list-item class

--- a/src/html/blocks/menu/project/item.html
+++ b/src/html/blocks/menu/project/item.html
@@ -1,4 +1,4 @@
-<div class="menu-item project-item">
+<div class="list-item project-item">
     <span class="project-item__marker @@project_color"></span>
     @@project
     <span class="project-item__count badge badge_circle">@@count</span>
