--- a/src/html/blocks/task-item.html
+++ b/src/html/blocks/task-item.html
@@ -1,4 +1,4 @@
-<li class="task-item">
+<li class="list-item task-item">
 
     <div class="task-item__checkbox checkbox">
         <input class="checkbox__control" id="@@id" type="checkbox"/>
