[HTML Layouts] Create menu not all, change some styles

--- a/src/week-task-list.html
+++ b/src/week-task-list.html
@@ -7,7 +7,39 @@
 </head>
 <body>
 	<aside>
-		
+		<ul>
+			<li class="menu-item menu-item_settings">settings</li>
+			<li class="menu-item menu-item_today">today <span class="tasks-item__project">&nbsp;</span></li>
+			<li class="menu-item menu-item_next7">next 7 days</li>
+		</ul>
+		<ul>
+			<li class="tasks__header">projects</li>
+			<li class="projects__create-new">Create new...</li>
+			<li class="projects-item projects-item_project-1">
+				Education
+				<span class="projects-item__number">1</span>
+			</li>
+			<li class="projects-item projects-item_project-2">
+				Home
+				<span class="projects-item__number">12</span>
+			</li>
+			<li class="projects-item projects-item_project-3">
+				Work
+				<span class="projects-item__number">8</span>
+			</li>
+			<li class="projects-item projects-item_project-4">
+				Kids
+				<span class="projects-item__number">88</span>
+			</li>
+			<li class="projects-item projects-item_project-5">
+				Study
+				<span class="projects-item__number">6</span>
+			</li>
+			<li class="projects-item projects-item_project-6">
+				Sport
+				<span class="projects-item__number">66</span>
+			</li>
+		</ul>
 	</aside>
 	<main>
 		<header class="header">
